UI code to attest Onchain attestation

--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.5.0",
+    "@nextui-org/react": "^2.4.6",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "ethers": "^6.13.2",
     "next": "13.3.4",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4",
-    "ethers": "^6.13.2"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
